--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
     </nav>
 
     <div class="container-fluid">
-        <div class="row bgr_lightBlue padding-top-bottom5">
+
+        <div id="selectionBar" class="row bgr_lightBlue padding-top-bottom5">
 
             <!-- measure selector -->
             <div class="col-sm-5 col-xs-12 ">
@@ -144,6 +145,12 @@
 
             <div class="col-sm-9 col-xs-12 graph" id="graph">
 
+            </div>
+
+            <div class="container">
+                <div id="datasetsList" class="col-12">
+
+                </div>
             </div>
 
         </div>
